fix: arruma informacoes pessoais

--- a/contato.html
+++ b/contato.html
@@ -62,8 +62,8 @@
     <article class="article_mapa">
 
       <address>
-        <p>Av. Paulista, 100</p>
-        <p>São Paulo - SP</p>
+        <p>Centro</p>
+        <p>Charqueadas RS</p>
       </address>
 
       <iframe
