--- a/index.html
+++ b/index.html
@@ -44,15 +44,18 @@
       <article>
 
         <!-- Foto do Perfil -->
-        <img src="./assets/img/user_01.svg" alt="Foto do criador desse conteúdo" />
+        <img src="./assets/img/foto-perfil.png" alt="Foto do criador desse conteúdo" />
 
         <!-- Texto do Perfil -->
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem odio possimus, dolorem
-          earum atque itaque quas soluta placeat iure omnis porro cum debitis sequi libero! Deleniti
-          vitae quis hic cumque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius
-          inventore ullam, quia deserunt enim cumque hic officia repudiandae ad ab et sapiente qui
-          vitae accusamus adipisci provident sit assumenda laboriosam!
+          Profissional com mais de 2 anos de experiência profissional como Desenvolvedor Full Stack em projetos para
+          empresas de Porto Alegre e região, atualmente no 4º semestre de tecnólogo em sistemas para internet no
+          Instituto Federal.
+          <br> <br>
+          Atuação em diferentes mercados dentro da indústria de lojas online, mostrando mais de 600 produtos em tempo
+          real e entregando para mais de 5000 pesquisas no google e consultoria de infraestrutura de TI, otimizando em
+          até 90% o tempo de geração de relatórios e contratos. Sólidos conhecimentos em desenvolver soluções escaláveis
+          com foco no cliente.
         </p>
 
       </article>
@@ -82,15 +85,15 @@
     <!-- Seção de Contato - Redes Sociais-->
     <section>
 
-      <a href="">
+      <a href="https://www.linkedin.com/in/miguel-leonardo-strapazon-lewandowski-332089240/">
         <img src="assets/img/linkedin.svg" alt="LinkedIn" />
       </a>
 
-      <a href="">
+      <a href="https://github.com/miguellewandowski">
         <img src="assets/img/github.svg" alt="Github" />
       </a>
 
-      <a href="">
+      <a href="https://www.instagram.com/miguel_strapazon/">
         <img src="assets/img/instagram.svg" alt="Instagram" />
       </a>
 
